package me.lukasz;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class PlayerDataManagerApplication
{

    public static void main(String[] args)
    {
        SpringApplication.run(PlayerDataManagerApplication.class, args);
    }

}
